RESOLVED FIXED150309
Incorrect repeated background-size behavior in keyframes
https://bugs.webkit.org/show_bug.cgi?id=150309
Summary Incorrect repeated background-size behavior in keyframes
Simon Fraser (smfr)
Reported 2015-10-18 20:32:09 PDT
Created attachment 263437 [details] Testcase Attached testcase shows wrong behavior.
Attachments
Testcase (1.20 KB, text/html)
2015-10-18 20:32 PDT, Simon Fraser (smfr)
no flags
Simpler testcase (644 bytes, text/html)
2015-10-18 20:40 PDT, Simon Fraser (smfr)
no flags
Patch (4.45 KB, patch)
2015-10-24 19:39 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2015-10-18 20:40:40 PDT
Created attachment 263438 [details] Simpler testcase
Simon Fraser (smfr)
Comment 2 2015-10-24 18:46:39 PDT
This is happening because when we generate the keyframe style, we don't repeat the background-size into the FillLayers for each of the two background images. Not sure yet where to fix that.
Simon Fraser (smfr)
Comment 3 2015-10-24 19:39:35 PDT
WebKit Commit Bot
Comment 4 2015-10-26 11:27:34 PDT
Comment on attachment 263999 [details] Patch Clearing flags on attachment: 263999 Committed r191589: <http://trac.webkit.org/changeset/191589>
WebKit Commit Bot
Comment 5 2015-10-26 11:27:37 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.