Incorrect repeated background-size behavior in keyframes https://bugs.webkit.org/show_bug.cgi?id=150309

Reviewed by Zalan Bujtas.

Source/WebCore:

After computing the style for a keyframe, we failed to propagate unset
fill-layer properties to all layers, which caused incorrect behavior when
there were multiple background images, but only one value on a background
property in the keyframes.

Fix by calling adjustRenderStyle() on keyframe styles, which invokes
style.adjustBackgroundLayers() which fixes the bug.

Test: animations/multiple-backgrounds.html

* css/StyleResolver.cpp:
(WebCore::StyleResolver::styleForKeyframe):

LayoutTests:

* animations/multiple-backgrounds-expected.html: Added.
* animations/multiple-backgrounds.html: Added.


Canonical link: https://commits.webkit.org/168708@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191589 268f45cc-cd09-0410-ab3c-d52691b4dbfc